--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div>
             <h1 id="home">Can you find where you are in Honkai Star Rail?</h1>
-            <div id="version" class="version">v.1.0.3 (2.1#closed-beta)/ @moemoe</div>
+            <div id="version" class="version">v.1.0.31 (2.1#closed-beta)/ @moemoe</div>
             <button id="play-button" class="play" onclick="togglePlay()">Play</button>
             <button id="settings-button" class="settings" onclick="toggleSettings()">Settings</button>
             <div class="settings-container" onclick="toggleSettings()"></div>
@@ -261,6 +261,7 @@
         <script src="static/js/starrailmap.js"></script>
         <script src="static/js/marker.js"></script>
         <script src="static/js/image.js"></script>
+        <script src="static/js/spacebar.js"></script>
         <script src="static/js/score.js"></script>
         <script src="static/js/time-countdown.js"></script>
         <script src="static/js/seetime-countdown.js"></script>
