--- a/index.html
+++ b/index.html
@@ -24,8 +24,34 @@
         </div>
         <div>
             <h1 id="home">Can you find where you are in Honkai Star Rail?</h1>
-            <div id="version" class="version">v.1.0.41 (2.1#closed-beta)/ @moemoe</div>
+            <div id="version" class="version">v.1.0.5 (2.1#open-beta)/ @moemoe</div>
             <button id="play-button" class="play" onclick="togglePlay()">Play</button>
+            <div class="options-wrapper">
+                <button class="options" onclick="toggleOptions()"></button>
+                <button class="credits" onclick="toggleCredits()"></button>
+            </div>
+            <div class="options-text" onclick="toggleOptions()">⚙ Options</div>
+            <div class="options-app">
+                <div class="options-volumewrapper">
+                    <img src="static/media/icons/volume-high-outline.svg" class="options-volume" title="How loud the audio will be during the game.">
+                    <div class="options-volumecontainer">
+                        <p class="options-volumetext"><span id="Volume"></span></p>
+                        <input type="range" min="0" max="100" class="volume" id="Range4">
+                    </div>
+                </div>
+            </div>
+            <div class="credits-text" onclick="toggleCredits()">♡ Credits</div>
+            <div class="credits-content" onclick="toggleCredits()">
+                <div>
+                  Inspired by<span class="highlighted-credit">&nbsp;Lost In Teyvat&nbsp;</span>by<span class="highlighted-credit">&nbsp;SirFelpudo</span>.
+                  <br>
+                  I am not affiliated with<span class="highlighted-credit">&nbsp;Honkai Star Rail&nbsp;</span>or<span class="highlighted-credit">&nbsp;Hoyoverse</span>.
+                  <br>
+                  Playtesters:<span class="highlighted-credit">&nbsp;moemoe</span>,<span class="highlighted-credit">&nbsp;Nryst</span>,<span class="highlighted-credit">&nbsp;tuechinh09</span>,<span class="highlighted-credit">&nbsp;kimura_zukikuto.0007</span>,<span class="highlighted-credit">&nbsp;masatoraharuka_60723</span>
+                </div>
+            </div>
+            <div class="options-container" onclick="toggleOptions()"></div>
+            <div class="credits-container" onclick="toggleCredits()"></div>
             <button id="settings-button" class="settings" onclick="toggleSettings()">Settings</button>
             <div class="settings-container" onclick="toggleSettings()"></div>
             <div class="settings-text-container">
@@ -114,7 +140,6 @@
                         </label>
                     </div>
                 </div>
-
             </div>
                 <!--kurukuru-->
                 <div id="loading-screen">
@@ -257,6 +282,7 @@
         <script src="static/js/play.js"></script>
         <script src="static/js/audio.js"></script>
         <script src="static/js/settings.js"></script>
+        <script src="static/js/togglecredits.js"></script>
         <script src="static/js/dropdown.js"></script>
         <script src="static/js/starrailmap.js"></script>
         <script src="static/js/marker.js"></script>
