--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
         </div>
         <div>
             <h1 id="home">Can you find where you are in Honkai Star Rail?</h1>
-            <div id="version" class="version">v.1.0.62 (2.1#open-beta)/ @moemoe</div>
-            <button id="play-button" class="play" onclick="togglePlay()">Play</button>
+            <div id="version" class="version">v.1.0.621 test (2.1#open-beta)/ @moemoe</div>
             <div class="options-wrapper">
                 <button id="options" class="options" onclick="toggleOptions()"></button>
                 <button id="credits" class="credits" onclick="toggleCredits()"></button>
@@ -65,7 +64,10 @@
             </div>
             <div class="options-container" onclick="toggleOptions()"></div>
             <div class="credits-container" onclick="toggleCredits()"></div>
-            <button id="settings-button" class="settings" onclick="toggleSettings()">Settings</button>
+            <div class="game-container">
+                <button id="play-button" class="play" onclick="togglePlay()">Play</button>
+                <button id="settings-button" class="settings" onclick="toggleSettings()">Settings</button>
+            </div>
             <div class="settings-container" onclick="toggleSettings()"></div>
             <div class="settings-text-container">
                 <img src="static/media/icons/settings-outline.svg" alt="Settings" class="settings-logo">
