--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="settings-gamerules-wrapper settings-gamerules-wrapper2">
                     <p class="settings-seedtext" onclick="toggleSettings">Seed</p>
                     <div>
-                        <input type="text" maxlength="16" placeholder="Leave blank for a random seed." class="seedinput" id="Input">
+                        <input type="text" maxlength="16" placeholder="Leave blank for random" class="seedinput" id="Input">
                     </div>
                     <img src="static/media/icons/game-controller-outline.svg" alt="Zoom" class="settings-gameruleround" title="How many rounds will be played.">
                     <div class="slider3-container">
