--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div>
             <h1 id="home">Can you find where you are in Honkai Star Rail?</h1>
-            <div id="version" class="version">v.1.0.63 test (2.1#open-beta)/ @moemoe</div>
+            <div id="version" class="version">v.1.0.631 (2.1#open-beta)/ @moemoe</div>
             <div class="options-wrapper">
                 <button id="options" class="options" onclick="toggleOptions()"></button>
                 <button id="credits" class="credits" onclick="toggleCredits()"></button>
@@ -286,11 +286,14 @@
                 <div id="final-score"></div>
                 <div id="guessOverlay" class="guess-overlay"></div>
                 <button id="guessButton" class="guess-btn">Guess</button>
-                <div id="guessResult" class="guess-result"></div>
+                <div class="guess-container">
+                    <div id="guessResult" class="guess-result"></div>
+                    <button id="next-round" class="next-round">Next Round</button>
+                </div>
             </div>    
         </div>
         <button id="menu-btn" class="menu-btn">Menu</button>
-        <button id="next-round" class="next-round">Next Round</button>
+        
         <audio id="gameaudio" class="gameaudio" controls>
             <source id="audioSource" class="audioSource" type="audio/mp3" src="">
         </audio>
