--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div>
             <h1 id="home">Can you find where you are in Honkai Star Rail?</h1>
-            <div id="version" class="version">v.1.0.631 (2.1#open-beta)/ @moemoe</div>
+            <div id="version" class="version">v.1.0.632 (2.1#open-beta)/ @moemoe</div>
             <div class="options-wrapper">
                 <button id="options" class="options" onclick="toggleOptions()"></button>
                 <button id="credits" class="credits" onclick="toggleCredits()"></button>
@@ -273,7 +273,6 @@
                         </div>
                     </div>
                 <div id="map"></div>
-                <div id="resultmap"></div>
                 <div id="game-stat" class="game-stat">
                     <p id="map-info"><span class="map-text">Map</span><br>Random</p>
                     <p id="round-info"></p>
@@ -286,9 +285,12 @@
                 <div id="final-score"></div>
                 <div id="guessOverlay" class="guess-overlay"></div>
                 <button id="guessButton" class="guess-btn">Guess</button>
-                <div class="guess-container">
-                    <div id="guessResult" class="guess-result"></div>
-                    <button id="next-round" class="next-round">Next Round</button>
+                <div class="guess-wrapper">
+                    <div id="resultmap"></div>
+                    <div class="guess-container">
+                        <div id="guessResult" class="guess-result"></div>
+                        <button id="next-round" class="next-round">Next Round</button>
+                    </div>
                 </div>
             </div>    
         </div>
