--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div>
             <h1 id="home">Can you find where you are in Honkai Star Rail?</h1>
-            <div id="version" class="version">v.1.0.7 (2.1#open-beta)/ @moemoe</div>
+            <div id="version" class="version">v.1.0.8 (2.2#open-beta)/ @moemoe</div>
             <div class="options-wrapper">
                 <button id="options" class="options" onclick="toggleOptions()"></button>
                 <button id="credits" class="credits" onclick="toggleCredits()"></button>
@@ -59,7 +59,7 @@
                   <br>
                   I am not affiliated with<span class="highlighted-credit">&nbsp;Honkai Star Rail&nbsp;</span>or<span class="highlighted-credit">&nbsp;Hoyoverse</span>.
                   <br>
-                  Playtesters:<span class="highlighted-credit">&nbsp;moemoe</span>,<span class="highlighted-credit">&nbsp;Nryst</span>,<span class="highlighted-credit">&nbsp;tuechinh08</span>,<span class="highlighted-credit">&nbsp;kimura_zukikuto.0007</span>
+                  Playtesters:<span class="highlighted-credit">&nbsp;moemoe</span>,<span class="highlighted-credit">&nbsp;Nryst</span>,<span class="highlighted-credit">&nbsp;tuechinh08</span>,<span class="highlighted-credit">&nbsp;kimura_zukikuto.0007</span>,<span class="highlighted-credit">&nbsp;pigeonontree</span>,<span class="highlighted-credit">&nbsp;deyuaru</span>,<span class="highlighted-credit">&nbsp;hromer_</span>
                 </div>
             </div>
             <div class="options-container" onclick="toggleOptions()"></div>
@@ -113,7 +113,7 @@
                         <img src="static/media/icons/eye-outline.svg" class="settings-gamerulesseetime" title="The amount of time the player can see the image.">
                         <div class="slider2-container">
                             <input type="number" onkeyup="if(parseInt(this.value) > 60000){this.value=120; return false;}" onkeydown="if(parseInt(this.value) > 60000){this.value=120; return false;}" class="settings-displaySeeTime" id="SeeTime" value="120">
-                            <input type="range" min="0" max="600" value="120" step="10" class="slider2" id="Range2">
+                            <input type="range" min="0" max="600" value="0" step="10" class="slider2" id="Range2">
                         </div>
                     </div>
                 </div>
